--- a/index.html
+++ b/index.html
@@ -683,7 +683,10 @@
                         </div>
                         <div data-animate="fadeIn" data-delay="700" class="line" style="margin: 30px 0;  color: white;"></div>                        
                         <div class="row">
-                            <div class="col-md-12">
+                            <div class="col-lg-12">
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore, repudiandae ducimus maiores illum voluptates qui praesentium ab inventore voluptate asperiores.</p>
+                            </div>
+                            <!-- <div class="col-md-12">
                                 <h3>Siguenos en nuestras <b>Redes Sociales</b></h3>
                                 <div class="responsiveFix widget clearfix">
                                     <a target="_blank" href="https://www.facebook.com/Creativos-Plus-635921623415017/" class="si-large social-icon si-dark si-facebook" data-animate="bounceIn" data-delay="400">
@@ -695,7 +698,7 @@
                                         <i class="icon-instagram2"></i>
                                     </a>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
