--- a/index.html
+++ b/index.html
@@ -460,107 +460,97 @@
             </div>
         </div>
         <div class="container">
-            <div id="portfolio" class="portfolio portfolio-3 grid-container portfolio-notitle clearfix pb-5 mb-2">
-                <article class="portfolio-item pf-media pf-icons">
-                    <div class="portfolio-image">
-                        <a href="portfolio-single.html">
-                            <img src="images/portfolio/1.png">
-                        </a>
-                        <div class="portfolio-overlay">
-                            <a target="_blank" href="http://www.serviplotca.com" class="center-icon">
-                                <i class="fas fa-plus texto-verde"></i>
+            <div id="oc-portfolio" class="owl-carousel portfolio-carousel carousel-widget" data-margin="20" data-nav="true" data-pagi="false" data-items-xs="1" data-items-sm="2" data-items-md="3" data-items-lg="4" data-loop="true"  data-autoplay="5000">
+                <div class="oc-item">
+                    <div class="iportfolio">
+                        <div class="portfolio-image">
+                            <a href="portfolio-single.html">
+                                <img src="images/portfolio/1.png" alt="Open Imagination">
                             </a>
+                            <div class="portfolio-overlay">
+                                <a target="_blank" href="http://www.serviplotca.com" class="center-icon">
+                                    <i class="fas fa-plus texto-verde"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="portfolio-desc">
+                            <h3><a class="texto-verde" target="_blank" href="http://www.serviplotca.com"><b>Serviplotca</b></a></h3>
+                            <span>Sitio web</span>
                         </div>
                     </div>
-                    <div class="portfolio-desc">
-                        <h3>
-                            <a class="texto-verde" target="_blank" href="http://www.serviplotca.com"><b>Serviplotca</b></a>
-                        </h3>
-                        <span>
-                            Sitio web
-                        </span>
-                    </div>
-                </article>
-                <article class="portfolio-item pf-media pf-icons">
-                    <div class="portfolio-image">
-                        <a href="portfolio-single.html">
-                            <img src="images/portfolio/2.png">
-                        </a>
-                        <div class="portfolio-overlay">
-                            <a target="_blank" href="http://www.drycleaningontherun.com" class="center-icon">
-                                <i class="fas fa-plus texto-verde"></i>
+                </div>
+                <div class="oc-item">
+                    <div class="iportfolio">
+                        <div class="portfolio-image">
+                            <a href="portfolio-single.html">
+                                <img src="images/portfolio/2.png">
                             </a>
+                            <div class="portfolio-overlay">
+                                <a target="_blank" href="http://www.drycleaningontherun.com" class="center-icon">
+                                    <i class="fas fa-plus texto-verde"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="portfolio-desc">
+                            <h3><a class="texto-verde" target="_blank" href="http://www.drycleaningontherun.com"><b>DryCleaning</b></a></h3>
+                            <span>Landing page</span>
                         </div>
                     </div>
-                    <div class="portfolio-desc">
-                        <h3>
-                            <a class="texto-verde" target="_blank" href="http://www.drycleaningontherun.com"><b>DryCleaning</b></a>
-                        </h3>
-                        <span>
-                            Landing page
-                        </span>
-                    </div>
-                </article>
-                <article class="portfolio-item pf-media pf-icons">
-                    <div class="portfolio-image">
-                        <a href="portfolio-single.html">
-                            <img src="images/portfolio/3.png">
-                        </a>
-                        <div class="portfolio-overlay">
-                            <a target="_blank" href="https://weare-yourfriends.com" class="center-icon">
-                                <i class="fas fa-plus texto-verde"></i>
+                </div>
+                <div class="oc-item">
+                    <div class="iportfolio">
+                        <div class="portfolio-image">
+                            <a href="portfolio-single.html">
+                                <img src="images/portfolio/3.png">
                             </a>
+                            <div class="portfolio-overlay">
+                                <a target="_blank" href="https://weare-yourfriends.com" class="center-icon">
+                                    <i class="fas fa-plus texto-verde"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="portfolio-desc">
+                            <h3><a class="texto-verde" target="_blank" href="https://weare-yourfriends.com"><b>We Are Your Friends</b></a></h3>
+                            <span>eCommerce</span>
                         </div>
                     </div>
-                    <div class="portfolio-desc">
-                        <h3>
-                            <a class="texto-verde" target="_blank" href="https://weare-yourfriends.com"><b>We Are Your Friends</b></a>
-                        </h3>
-                        <span>
-                            eCommerce
-                        </span>
-                    </div>
-                </article>
-                <article class="portfolio-item pf-media pf-icons">
-                    <div class="portfolio-image">
-                        <a href="portfolio-single.html">
-                            <img src="images/portfolio/4.png">
-                        </a>
-                        <div class="portfolio-overlay">
-                            <a target="_blank" href="http://petroleumblg.com" class="center-icon">
-                                <i class="fas fa-plus texto-verde"></i>
+                </div>
+                <div class="oc-item">
+                    <div class="iportfolio">
+                        <div class="portfolio-image">
+                            <a href="portfolio-single.html">
+                                <img src="images/portfolio/4.png">
                             </a>
+                            <div class="portfolio-overlay">
+                                <a target="_blank" href="http://petroleumblg.com" class="center-icon">
+                                    <i class="fas fa-plus texto-verde"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="portfolio-desc">
+                            <h3><a class="texto-verde" target="_blank" href="http://petroleumblg.com"><b>Petroleum BLG</b></a></h3>
+                            <span>Sitio web</span>
                         </div>
                     </div>
-                    <div class="portfolio-desc">
-                        <h3>
-                            <a class="texto-verde" target="_blank" href="http://petroleumblg.com"><b>Petroleum BLG</b></a>
-                        </h3>
-                        <span>
-                            Sitio web
-                        </span>
-                    </div>
-                </article>
-                <article class="portfolio-item pf-media pf-icons">
-                    <div class="portfolio-image">
-                        <a href="portfolio-single.html">
-                            <img src="images/portfolio/5.png">
-                        </a>
-                        <div class="portfolio-overlay">
-                            <a target="_blank" href="http://jjcustomsolution.com" class="center-icon">
-                                <i class="fas fa-plus texto-verde"></i>
+                </div>
+                <div class="oc-item">
+                    <div class="iportfolio">
+                        <div class="portfolio-image">
+                            <a href="portfolio-single.html">
+                                <img src="images/portfolio/5.png">
                             </a>
+                            <div class="portfolio-overlay">
+                                <a target="_blank" href="http://jjcustomsolution.com" class="center-icon">
+                                    <i class="fas fa-plus texto-verde"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="portfolio-desc">
+                            <h3><a class="texto-verde" target="_blank" href="http://jjcustomsolution.com"><b>JJ Custom Solutions</b></a></h3>
+                            <span>Sitio web</span>
                         </div>
                     </div>
-                    <div class="portfolio-desc">
-                        <h3>
-                            <a class="texto-verde" target="_blank" href="http://jjcustomsolution.com"><b>JJ Custom Solutions</b></a>
-                        </h3>
-                        <span>
-                            Sitio web
-                        </span>
-                    </div>
-                </article>
+                </div>
             </div>
         </div>
         <div class="section nomargin noborder bg-verde">
@@ -667,7 +657,7 @@
                                     <label class="texto-blanco" for="mensaje">Mensaje(*)</label>
                                     <textarea class="form-control" id="mensaje" name="mensaje" rows="4" cols="30" placeholder="Escribe tu mensaje" required></textarea>
                                 </div>
-                                <a id="enviar" class=" button btn-verde button-3d button-reveal button-xlarge tright button-rounded" href="" data-animate="bounceIn" data-delay="800" >
+                                <a href="" id="enviar" class="button btn-verde button-3d button-reveal button-xlarge tright button-rounded" style="margin-left: -1px;">
                                     <i class="icon-line-arrow-right"></i>
                                     <span>Enviar</span>
                                 </a>
