--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
     <link rel="stylesheet" href="css/colors.css" type="text/css">
     <link rel="stylesheet" href="css/colors.php?color=24B35A" type="text/css"/>
 
+    <link rel="stylesheet" href="rs-plugin/css/settings.css">
+    <link rel="stylesheet" href="rs-plugin/css/layers.css">
+    <link rel="stylesheet" href="rs-plugin/css/navigation.css">
+    <link rel="stylesheet" href="rs-plugin/css/revolution.addon.particles.css">
+    <link rel="stylesheet" href="rs-plugin/css/typewriter.css">
+
     <link rel="icon" type="image/png" href="images/logos/icono.png">
     <title>CreativosPlus | Agencia Digital </title>
 
@@ -55,18 +61,60 @@
 
     </script>
 
+    <style>
+
+        .demos-filter {
+            margin: 0;
+            text-align: right;
+        }
+
+        .demos-filter li {
+            list-style: none;
+            margin: 10px 0px;
+        }
+
+        .demos-filter li a {
+            display: block;
+            border: 0;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            color: #444;
+        }
+
+        .demos-filter li a:hover,
+        .demos-filter li.activeFilter a { color: #1ABC9C; }
+
+        @media (max-width: 991px) {
+            .demos-filter { text-align: center; }
+
+            .demos-filter li {
+                float: left;
+                width: 33.3%;
+                padding: 0 20px;
+            }
+        }
+
+        @media (max-width: 767px) { .demos-filter li { width: 50%; } }
+
+        #welcome_wrapper .tp-loader.spinner3{ background-color: #222222 !important; }
+        video::-webkit-media-controls-start-playback-button{display:none !important}
+        .tc-gradient i:before{background:-webkit-linear-gradient(left,#2ed8a3 0%,#2970ff 100%);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
+        .tc-btnshadow{-webkit-box-shadow:3px 5px 10px 0px rgba(0,0,0,0.2) !important;-moz-box-shadow:3px 5px 10px 0px rgba(0,0,0,0.2) !important;box-shadow:3px 5px 10px 0px rgba(0,0,0,0.2) !important}
+
+    </style>
+
 </head>
 <body class="stretched">
-    <header id="header" class="full-header">
+    <header id="header" class="transparent-header full-header">
         <div id="header-wrap">
             <div class="container clearfix">
                 <div id="primary-menu-trigger"><i class="icon-reorder"></i></div>
                 <div id="logo">
-                    <a href="index.html" class="standard-logo" data-dark-logo="images/logos/logo.png">
-                        <img src="images/logos/logo.png" alt="Canvas Logo">
+                    <a href="index.html" class="standard-logo" data-sticky-logo="images/logos/logo.png">
+                        <img src="images/logos/logoblanco.png" alt="">
                     </a>
-                    <a href="index.html" class="retina-logo" data-dark-logo="images/logos/logo.png">
-                        <img src="images/logos/logo.png" alt="Canvas Logo">
+                    <a href="index.html" class="retina-logo" data-sticky-logo="images/logos/logo.png">
+                        <img src="images/logos/logoblanco.png" alt="">
                     </a>
                 </div>
                 <nav id="primary-menu">
@@ -101,12 +149,12 @@
                                 <div>Idioma</div>
                             </a>
                             <ul>
-                                <li>
+                                <li class="menuLinks2">
                                     <a href="index.html">
                                         <div>Español</div>
                                     </a>
                                 </li>
-                                <li>
+                                <li class="menuLinks2">
                                     <a href="us/index.html">
                                         <div>Ingles</div>
                                     </a>
@@ -118,7 +166,149 @@
             </div>
         </div>
     </header>
-    <section id="slider" class="slider-element slider-parallax swiper_wrapper clearfix" data-autoplay="3500" data-effect="slide" data-loop="true" data-speed="400" data-progress="true">
+    <section id="slider" class="slider-element revslider-wrap clearfix">
+		<div id="welcome_wrapper" class="rev_slider_wrapper fullscreen-container" data-alias="techco-header1" data-source="gallery" style="background:#000000;padding:0px;">
+			<div id="welcome" class="rev_slider fullscreenbanner" style="display:none;" data-version="5.4.5.2">
+                <ul>
+                    <li data-index="rs-240" data-transition="fade" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="1000"  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
+                        <img src="rs-plugin/images/hello-world.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgparallax="4" class="rev-slidebg" data-no-retina>
+                        <div class="rs-background-video-layer"
+                            data-forcerewind="on"
+                            data-volume="mute"
+                            data-videowidth="100%"
+                            data-videoheight="100%"
+                            data-videomp4="rs-plugin/images/hello-world.mp4"
+                            data-videopreload="auto"
+                            data-videoloop="loop"
+                            data-forceCover="1"
+                            data-aspectratio="16:9"
+                            data-autoplay="true"
+                            data-autoplayonlyfirsttime="false">
+                        </div>
+                        <div class="tp-caption tp-shape tp-shapewrapper"
+                            id="slide-240-layer-7"
+                            data-x="['center','center','center','center']" 
+                            data-hoffset="['0','0','0','0']"
+                            data-y="['middle','middle','middle','middle']" 
+                            data-voffset="['0','0','0','0']"
+                            data-width="full"
+                            data-height="full"
+                            data-whitespace="nowrap"
+                            data-type="shape"
+                            data-basealign="slide"
+                            data-responsive_offset="off"
+                            data-responsive="off"
+                            data-frames='[{"delay":10,"speed":1000,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"frame":"999","to":"opacity:0;","ease":"Power4.easeInOut"}]'
+                            data-textAlign="['inherit','inherit','inherit','inherit']"
+                            data-paddingtop="[0,0,0,0]"
+                            data-paddingright="[0,0,0,0]"
+                            data-paddingbottom="[0,0,0,0]"
+                            data-paddingleft="[0,0,0,0]"
+                            data-blendmode="hard-light"
+                            style="z-index: 5;font-family:Open Sans;background:linear-gradient(90deg, rgba(41,112,255,0.75) 0%, rgba(46,216,163,0.75) 100%);"> 
+                        </div>
+                        <div class="tp-caption"
+                            id="slide-240-layer-10"
+                            data-x="['left','left','left','left']" 
+                            data-hoffset="['40','40','30','25']"
+                            data-y="['middle','middle','middle','middle']" 
+                            data-voffset="['-103','-102','-123','-152']"
+                            data-fontsize="['80','70','60','50']"
+                            data-lineheight="['80','70','60','50']"
+                            data-width="none"
+                            data-height="none"
+                            data-whitespace="nowrap"
+                            data-type="text"
+                            data-responsive_offset="off"
+                            data-responsive="off"
+                            data-frames='[{"delay":490,"speed":1500,"frame":"0","from":"x:[175%];y:0px;z:0;rX:0;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:1;","mask":"x:[-100%];y:0;s:inherit;e:inherit;","to":"o:1;","ease":"Power3.easeOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
+                            data-textAlign="['inherit','inherit','inherit','inherit']"
+                            data-paddingtop="[0,0,0,0]"
+                            data-paddingright="[0,0,0,0]"
+                            data-paddingbottom="[0,0,0,0]"
+                            data-paddingleft="[0,0,0,0]"
+                            style="z-index: 6; white-space: nowrap; font-size: 80px; line-height: 80px; font-weight: 400; color: #ffffff; letter-spacing: 0px;font-family:Open Sans;">
+                            <i class="icon-plus"></i> 
+                        </div>
+                        <div class="tp-caption"
+                            id="slide-240-layer-1"
+                            data-x="['left','left','left','left']" 
+                            data-hoffset="['120','120','100','80']"
+                            data-y="['middle','middle','middle','middle']" 
+                            data-voffset="['-100','-100','-120','-150']"
+                            data-fontsize="['90','80','70','60']"
+                            data-lineheight="['90','80','70','60']"
+                            data-fontweight="['900','600','600','600']"
+                            data-letterspacing="['-5','-5','-5','-3']"
+                            data-width="['none','none','320','260']"
+                            data-height="none"
+                            data-whitespace="['normal','nowrap','normal','normal']"
+                            data-type="text"
+                            data-responsive_offset="off"
+                            data-responsive="off"
+                            data-frames='[{"delay":500,"speed":1500,"frame":"0","from":"x:[-175%];y:0px;z:0;rX:0;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:1;","mask":"x:[100%];y:0;s:inherit;e:inherit;","to":"o:1;","ease":"Power3.easeOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"nothing"}]'
+                            data-textAlign="['left','left','left','left']"
+                            data-paddingtop="[0,0,0,0]"
+                            data-paddingright="[10,10,0,0]"
+                            data-paddingbottom="[0,0,0,0]"
+                            data-paddingleft="[0,0,0,0]"
+                            style="z-index: 7; min-width: 260px; max-width: 260px; white-space: normal; font-size: 90px; line-height: 90px; font-weight: 900; color: rgba(255,255,255,1); letter-spacing: -5px;font-family:Open Sans;">
+                            <span style="font-weight:400;">Creativos</span>Plus 
+                        </div>
+                        <div class="tp-caption"
+                            id="slide-240-layer-2"
+                            data-x="['left','left','left','left']" 
+                            data-hoffset="['120','120','100','80']"
+                            data-y="['middle','middle','middle','middle']" 
+                            data-voffset="['50','40','0','-60']"
+                            data-fontsize="['26','23','20','17']"
+                            data-lineheight="['35','30','25','22']"
+                            data-width="['640','481','320','260']"
+                            data-height="none"
+                            data-whitespace="normal"
+                            data-type="text"
+                            data-responsive_offset="off"
+                            data-responsive="off"
+                            data-frames='[{"delay":800,"speed":1500,"frame":"0","from":"y:50px;opacity:0;","to":"o:1;","ease":"Power4.easeOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"nothing"}]'
+                            data-textAlign="['left','left','left','left']"
+                            data-paddingtop="[0,0,0,0]"
+                            data-paddingright="[0,0,0,0]"
+                            data-paddingbottom="[0,0,0,0]"
+                            data-paddingleft="[0,0,0,0]"
+                            style="z-index: 8; min-width: 640px; max-width: 640px; white-space: normal; font-size: 26px; line-height: 35px; font-weight: 300; color: #ffffff; letter-spacing: px;font-family:Open Sans;">
+                            Say Hello to the new web presence of your internet company. Usable, Customizable and Beautiful! 
+                        </div>
+                        <button class="tp-caption tc-btnshadow tp-rs-menulink btn-verde button button-3d button-xlarge button-rounded"
+                            href=""
+                            id="slide-240-layer-12"
+                            data-x="['left','left','left','left']" 
+                            data-hoffset="['120','120','100','80']"
+                            data-y="['middle','middle','middle','middle']" 
+                            data-voffset="['150','140','90','20']"
+                            data-width="none"
+                            data-height="none"
+                            data-whitespace="nowrap"
+                            data-type="button"
+                            data-actions='[{"event":"click", "action":"scrollbelow", "offset":"1150px"}]'
+                            data-responsive_offset="off"
+                            data-responsive="off"
+                            data-frames='[{"delay":1000,"speed":1500,"frame":"0","from":"y:50px;opacity:0;","to":"o:1;","ease":"Power4.easeOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"150","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;","style":"c:rgba(255,255,255,1);bg:rgb(41,194,146);"}]'
+                            data-textAlign="['inherit','inherit','inherit','inherit']"
+                            data-paddingtop="[0,0,0,0]"
+                            data-paddingright="[20,20,20,20]"
+                            data-paddingbottom="[0,0,0,0]"
+                            data-paddingleft="[20,20,20,20]"
+                            style="z-index: 9;">
+                            Nuestros servicios
+                        </button>
+                    </li>
+                </ul>
+                <div class="tp-bannertimer tp-bottom" style="visibility: hidden !important;"></div>
+            </div>
+        </div>
+
+    </section>
+    <!-- <section id="slider" class="slider-element slider-parallax swiper_wrapper clearfix" data-autoplay="3500" data-effect="slide" data-loop="true" data-speed="400" data-progress="true">
         <div class="slider-parallax-inner">
             <div class="swiper-container swiper-parent">
                 <div class="swiper-wrapper">
@@ -158,7 +348,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <section id="content">
         <div class="si-sticky d-none d-lg-block">
             <a target="_blank" href="https://www.facebook.com/Creativos-Plus-635921623415017/" class="social-icon si-facebook si-colored" data-animate="bounceInLeft">
@@ -654,8 +844,96 @@
     <script src="js/jquery.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/functions.js"></script>
+    <script src="rs-plugin/js/jquery.themepunch.tools.min.js"></script>
+    <script src="rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
+    <script src="rs-plugin/js/revolution.addon.particles.min.js"></script>
+    <script src="rs-plugin/js/revolution.addon.typewriter.min.js"></script>
+    <script src="rs-plugin/js/revolution.extension.actions.min.js"></script>
+    <script src="rs-plugin/js/revolution.extension.carousel.min.js"></script>
+    <script src="rs-plugin/js/revolution.extension.kenburn.min.js"></script>
+    <script src="rs-plugin/js/revolution.extension.layeranimation.min.js"></script>
+    <script src="rs-plugin/js/revolution.extension.migration.min.js"></script>
+    <script src="rs-plugin/js/revolution.extension.navigation.min.js"></script>
+    <script src="rs-plugin/js/revolution.extension.parallax.min.js"></script>
+    <script src="rs-plugin/js/revolution.extension.slideanims.min.js"></script>
+    <script src="rs-plugin/js/revolution.extension.video.min.js"></script>
+    <script>
+        var revapi108,
+		tpj=jQuery;
+				tpj(document).ready(function() {
+		if(tpj("#welcome").revolution == undefined){
+			revslider_showDoubleJqueryError("#welcome");
+		}else{
+			revapi108 = tpj("#welcome").show().revolution({
+				sliderType:"hero",
+				jsFileLocation:"rs-plugin/js/",
+				sliderLayout:"fullscreen",
+				dottedOverlay:"none",
+				delay:9000,
+				particles: {startSlide: "first", endSlide: "last", zIndex: "1",
+					particles: {
+						number: {value: 80}, color: {value: "#ffffff"},
+						shape: {
+							type: "circle", stroke: {width: 0, color: "#ffffff", opacity: 1},
+							image: {src: ""}
+						},
+						opacity: {value: 0.2, random: true, min: 0.1, anim: {enable: false, speed: 3, opacity_min: 0, sync: false}},
+						size: {value: 2, random: false, min: 30, anim: {enable: false, speed: 40, size_min: 1, sync: false}},
+						line_linked: {enable: true, distance: 150, color: "#ffffff", opacity: 0.2, width: 1},
+						move: {enable: true, speed: 6, direction: "none", random: true, min_speed: 6, straight: false, out_mode: "out"}},
+					interactivity: {
+						events: {onhover: {enable: true, mode: "repulse"}, onclick: {enable: false, mode: "repulse"}},
+						modes: {grab: {distance: 400, line_linked: {opacity: 0.1}}, bubble: {distance: 400, size: 40, opacity: 0.4}, repulse: {distance: 100}}
+					}
+				},
+				navigation: {
+				},
+				viewPort: {
+					enable:true,
+					outof:"wait",
+					visible_area:"80%",
+					presize:true
+				},
+				responsiveLevels:[1240,1024,778,480],
+				visibilityLevels:[1240,1024,778,480],
+				gridwidth:[1240,1024,778,480],
+				gridheight:[868,768,960,720],
+				lazyType:"none",
+				parallax: {
+					type:"scroll",
+					origo:"slidercenter",
+					speed:400,
+				    speedbg:0,
+				    speedls:0,
+					levels:[5,10,15,20,25,30,35,40,45,46,47,48,49,50,51,55],
+				},
+				shadow:0,
+				spinner:"spinner3",
+				autoHeight:"off",
+				fullScreenAutoWidth:"off",
+				fullScreenAlignForce:"off",
+				fullScreenOffsetContainer: "",
+				fullScreenOffset: "",
+				disableProgressBar:"on",
+				hideThumbsOnMobile:"off",
+				hideSliderAtLimit:0,
+				hideCaptionAtLimit:0,
+				hideAllCaptionAtLilmit:0,
+				debugMode:false,
+				fallbacks: {
+					simplifyAll:"off",
+					disableFocusListener:false,
+				}
+			});
+		}
+
+		RsTypewriterAddOn(tpj, revapi108);
+
+		RsParticlesAddOn(revapi108);
+	});
+    </script>
     <script src="js/main.js"></script>
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <!-- <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script> -->
 
 </body>
 </html>
