--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@
     
     <link rel="stylesheet" href="css/responsive.css" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
     <link rel="stylesheet" href="css/colors.css" type="text/css">
     <link rel="stylesheet" href="css/colors.php?color=24B35A" type="text/css"/>
-
     <link rel="stylesheet" href="rs-plugin/css/settings.css">
     <link rel="stylesheet" href="rs-plugin/css/layers.css">
     <link rel="stylesheet" href="rs-plugin/css/navigation.css">
@@ -33,8 +31,8 @@
     <meta name="robots" content="index, follow, all"/>
     <meta name="robots" content="ALL"/>
     <meta name="location" content="Venezuela, Chile, Argentina, Mexico, Panama, Colombia, Peru, Ecuador, Estados Unidos, España"/>
-    <meta name="copyright" content="CREATIVOSPLUS©2018">
-    <meta name="author" content="CREATIVOSPLUS©2018 ">
+    <meta name="copyright" content="CREATIVOSPLUS©2019">
+    <meta name="author" content="CREATIVOSPLUS©2019 ">
     <meta name="language" content="es">
     <meta name="country" content="Worldwide">
     <meta name="distribution" content="all | index | follow">
@@ -42,11 +40,11 @@
     <meta name="Classification" content="commercial">
     <meta name="Usergroup" content="Public">
     <meta content="yes" http-equiv="public">
-    <meta property="og:url" content="http://www.creativosplus.com"/>
+    <meta property="og:url" content="https://creativosplus.com"/>
     <meta name="googlebot" content="all">
     <meta NAME="rating" CONTENT="General">
     <meta name="audience" content="All">
-    <meta name="Keywords" content="Creativos, Diseño web, agencia, Marketing, Aplicaciones, digital, diseño grafico, identidad, servicios, wordpress, paginas web, paginas, agencias, online, on-line, desarrollo web, precios de paginas web, diseño web en venezuela, diseño web en chile, agencias de marketing en venezuela, apps, plus, creativosplus, programacion web"/>
+    <meta name="Keywords" content="Creativos, Diseño web, agencia, Marketing, Aplicaciones, digital, diseño grafico, identidad, servicios, wordpress, paginas web, paginas, agencias, online, on-line, desarrollo web, precios de paginas web, diseño web en venezuela, diseño web en chile, agencias de marketing en venezuela, apps, plus, creativosplus, programacion web, identidad digital, emprendimiento, emprendimiento digital, paginas web profesionales, bajos costos, web"/>
     <meta NAME="HTTP.Language" CONTENT="Spanish">
     <meta property="og:title" content="CreativosPlus | Agencia Digital"/>
     <meta property="og:site_name" content="CreativosPlus, Somos una empresa digital especializada en el desarrollo web, marketing digital y diseño grafico brindando soluciones digitales."/>
@@ -94,11 +92,11 @@
             }
         }
 
-        @media (max-width: 767px) { .demos-filter li { width: 50%; } }
+        @media (max-width: 767px) { .demos-filter li { width: 100%; } }
 
         #welcome_wrapper .tp-loader.spinner3{ background-color: #222222 !important; }
-        video::-webkit-media-controls-start-playback-button{display:none !important}
-        .tc-gradient i:before{background:-webkit-linear-gradient(left,#2ed8a3 0%,#2970ff 100%);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
+        video::-webkit-media-controls-start-playback-button{display:none !important;}
+        .tc-gradient i:before{background:-webkit-linear-gradient(left,#2ed8a3 0%,#2970ff 100%); background-clip:text;-webkit-text-fill-color:transparent;}
         .tc-btnshadow{-webkit-box-shadow:3px 5px 10px 0px rgba(0,0,0,0.2) !important;-moz-box-shadow:3px 5px 10px 0px rgba(0,0,0,0.2) !important;box-shadow:3px 5px 10px 0px rgba(0,0,0,0.2) !important}
 
     </style>
@@ -367,7 +365,8 @@
         <div class="section nomargin noborder" id="heading-block-1">
             <div class="container center clearfix">
                 <div class="heading-block">
-                    <h2 class="texto-verde"><b>Encontrar tu identidad</b>, nunca fue tan fácil.</h2>
+                    <h2 class="texto-verde"> <b>Encontrar tu</b> <strong>identidad Digital</strong>, nunca fue tan fácil.</h2>
+                    
                 </div>
                 <div class="row">
                     <div class="col-lg-3 col-sm-6">
@@ -378,7 +377,7 @@
                                 </a>
 							</div>
 							<h3 class="texto-verde">Conocemos tu idea</h3>
-							<p>Aprendemos a visualizar lo que quieres para tu negocio.</p>
+							<p>Aprendemos a visualizar lo que quieres para tu negocio en el <strong>mundo digital</strong>.</p>
 						</div>
                     </div>
                     <div class="col-lg-3 col-sm-6">
@@ -388,8 +387,8 @@
                                     <i class="icon-pencil-alt i-alt"></i>
                                 </a>
 							</div>
-							<h3 class="texto-verde">Diseñamos</h3>
-                            <p>Transformamos tu idea en un diseño agradable que puedas ver realidad.</p>
+							<h3 class="texto-verde"><strong>Diseñamos</strong></h3>
+                            <p>Transformamos tu idea en un diseño  unico para tu <strong>identidad web</strong></p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6">
@@ -399,8 +398,8 @@
                                     <i class="icon-wrench1 i-alt"></i>
                                 </a>
 							</div>
-							<h3 class="texto-verde">Desarrollamos</h3>
-                            <p>Implementamos el diseño con nuestro equipo de expertos.</p>
+							<h3 class="texto-verde"><strong>Desarrollamos</strong></h3>
+                            <p>Contamos con una vasta experiencia en diseño de <strong>páginas web a su medida</strong>.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6">
@@ -410,8 +409,8 @@
                                     <i class="icon-thumbs-up i-alt"></i>
                                 </a>
 							</div>
-							<h3 class="texto-verde">Entregamos identidad</h3>
-                            <p>Finalizamos todas tus ideas y las hacemos realidad.</p>
+							<h3 class="texto-verde">Entregamos <strong>identidad</strong></h3>
+                            <p>Finalizamos todas tus ideas y las hacemos realidad al mejor <strong>precio</strong>.</p>
                         </div>
                     </div>
                 </div>
@@ -422,18 +421,18 @@
                 <div class="heading-block center">
                     <h2>
                         <div class="text-rotater texto-blanco" data-separator="|" data-rotate="flipInX" data-speed="2500">
-                            <b>CreativosPlus</b> es para tu negocio <b><span class="t-rotate">Identidad|Ganancia|Presencia</span></b>
+                            <strong>CreativosPlus</strong> es para tu negocio <b><span class="t-rotate">Identidad|Ganancia|Presencia</span></b>
                         </div>
                     </h2>
                 </div>
-                <p class="texto-blanco">Somos una agencia digital especializada en el desarrollo de tu identidad, nosotros hacemos de tu idea un proyecto sólido y de buena calidad en internet. Nuestra misión es hacer de tu idea una identidad completa de tu negocio.</p>
+                <p class="texto-blanco">Somos una agencia digital especializada en el desarrollo web y creando identidad en el mundo digital, nosotros hacemos de tu idea un proyecto sólido y de buena calidad en internet. Nuestra misión es hacer de tu idea una identidad completa de tu negocio.</p>
                 <div class="row">
                     <div class="col-lg-4 col-sm-4">
                         <div class="feature-box fbox-small fbox-plain">
                             <div class="fbox-icon">
                                 <i class="texto-blanco icon-line2-speedometer"></i>
                             </div>
-                            <h3 class="texto-blanco">Rapidez</h3>
+                            <h3 class="texto-blanco"><strong>Rapidez</strong></h3>
                             <p class="texto-blanco">Entregamos tu proyecto en la menor cantidad de tiempo posible.</p>
                         </div>
                     </div>
@@ -443,7 +442,7 @@
                                 <i class="texto-blanco icon-users1"></i>
                             </div>
                             <h3 class="texto-blanco">Expertos</h3>
-                            <p class="texto-blanco">Somos un equipo de profesionales que entienden la necesidad de tu proyecto.</p>
+                            <p class="texto-blanco">Somos un equipo de profesionales en el desarrollo web que entienden la necesidad de tu proyecto.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-4">
@@ -480,7 +479,7 @@
                             <div class="fbox-icon">
                                 <i class="texto-blanco icon-plus"></i>
                             </div>
-                            <h3 class="texto-blanco">Nuestro PLUS</h3>
+                            <h3 class="texto-blanco">Nuestro <strong>PLUS</strong></h3>
                             <p class="texto-blanco">Te otorgamos ese plus que no te ofrecen los demás.</p>
                         </div>
                     </div>
@@ -492,8 +491,8 @@
                 <div class="row">
                     <div class="col-lg-9">
                         <div class="heading-block center">
-							<h2 class="texto-blanco">Tener <b>presencia</b> en internet nunca fue tan necesario.</h2>
-							<span class="texto-blanco">La identidad de tu negocio te espera.</span>
+							<h2 class="texto-blanco">Tener <strong>presencia</strong> en internet nunca fue tan necesario.</h2>
+							<span class="texto-blanco">La <strong>identidad</strong> de tu negocio te espera.</span>
 						</div>
                     </div>
                     <div class="col-lg-3 mt-3">
@@ -508,7 +507,7 @@
         <div id="servicios" class="section nomargin noborder">
             <div class="container clearfix">
                 <div class="heading-block center">
-                    <h2 class="texto-verde">Ofrecemos los mejores <b>servicios</b> para ti.</h2>
+                    <h2 class="texto-verde">Ofrecemos los mejores <strong>servicios web</strong> para ti.</h2>
                 </div>
                 <div class="col_two_fifth topmargin nobottommargin" style="min-height: 350px;">
                     <img class="rotarImg" src="images/servicios/servicio1.png" alt="">
@@ -571,7 +570,7 @@
         <div id="trabajos" class="section nomargin noborder">
             <div class="container">
                 <div class="heading-block center">
-                    <h2 class="texto-verde"><b>Últimos trabajos</b>, conoce la calidad de ellos.</h2>
+                    <h2 class="texto-verde"><strong>Últimos trabajos web</strong>, conoce la calidad de ellos.</h2>
                 </div>
                 <div id="oc-portfolio" class="owl-carousel portfolio-carousel carousel-widget" data-margin="20" data-nav="true" data-pagi="false" data-items-xs="1" data-items-sm="2" data-items-md="3" data-items-lg="4" data-loop="true"  data-autoplay="5000">
                     <div class="oc-item">
@@ -672,8 +671,8 @@
                 <div class="row">
                     <div class="col-lg-8">
                         <div class="heading-block center">
-                            <h2 class="texto-blanco">Prueba gratis, nuestro sistema de citas.</h2>
-                            <span class="texto-blanco">Nuestros clientes están felices con el sistema.</span>
+                            <h2 class="texto-blanco">No esperes más  para obtener tu <strong>presencia en internet</strong>.</h2>
+                            <span class="texto-blanco">Tu negocio en manos de expertos.</span>
                         </div>
                     </div>
                     <div class="col-lg-3 mt-3">
@@ -690,7 +689,7 @@
                 <div class="heading-block center">
                     <h2 class="texto-verde"><b>Clientes</b> que han confiado en nosotros.</h2>
                 </div>
-                <div id="oc-testi" class="owl-carousel  testimonials-carousel  carousel-widget" data-margin="20" data-nav="true" data-pagi="false" data-loop="false"  data-autoplay="5000" data-items-xs="1" data-items-sm="1" data-items-md="2" data-items-lg="3" data-items-xl="3">
+                <div id="oc-testi" class="owl-carousel  testimonials-carousel  carousel-widget" data-margin="20" data-nav="true" data-pagi="false" data-loop="false"  data-autoplay="5000" data-items-xs="1" data-items-sm="1" data-items-md="3" data-items-lg="3" data-items-xl="3">
                     <div class="oc-item">
                         <div class="testimonial">
                             <div class="testi-content mt-2">
@@ -933,7 +932,5 @@
 	});
     </script>
     <script src="js/main.js"></script>
-    <!-- <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script> -->
-
 </body>
 </html>
